--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,33 @@
-aiogram==3.4.1
-aiosqlite==0.19.0
-APScheduler==3.10.4
-python-dotenv==1.0.0
-openpyxl==3.1.2
-pydantic==2.5.0
-python-dateutil==2.8.2
+# ========================================
+# CORE DEPENDENCIES (Production)
+# ========================================
+
+aiogram==3.14.0
+aiosqlite==0.20.0
+APScheduler==3.11.0
+python-dotenv==1.0.1
+openpyxl==3.1.5
+pydantic==2.10.3
+python-dateutil==2.9.0.post0
+
+# ========================================
+# OPTIONAL: Redis для production FSM storage
+# Раскомментируйте для использования RedisStorage
+# ========================================
+
+# redis==5.2.1
+
+# ========================================
+# OPTIONAL: Мониторинг и отладка
+# Раскомментируйте при необходимости
+# ========================================
+
+# sentry-sdk==2.18.0
+# prometheus-client==0.21.0
+
+# ========================================
+# DEVELOPMENT DEPENDENCIES
+# Установите отдельно: pip install -e ".[dev]"
+# или используйте: pip install -r requirements-dev.txt
+# ========================================
 
