--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -8,22 +8,22 @@ version: '3.8'
 services:
   bot:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: docker/Dockerfile
       target: builder  # Используем builder stage с dev tools
     container_name: telegram_repair_bot_dev
     restart: "no"
     env_file:
-      - .env
+      - ../.env
     environment:
       - DATABASE_PATH=/app/data/bot_database.db
       - LOG_LEVEL=DEBUG
       - PYTHONUNBUFFERED=1
     volumes:
       # Монтируем весь проект для hot-reload
-      - .:/app
-      - ./data:/app/data
-      - ./logs:/app/logs
+      - ..:/app
+      - ../data:/app/data
+      - ../logs:/app/logs
     ports:
       # Открываем порт для отладки (если нужно)
       - "5678:5678"
