--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,12 +8,12 @@ services:
   # Telegram Bot
   bot:
     build:
-      context: .
-      dockerfile: Dockerfile
+      context: ..
+      dockerfile: docker/Dockerfile
     container_name: telegram_repair_bot
     restart: unless-stopped
     env_file:
-      - .env
+      - ../.env
     environment:
       # Database
       - DATABASE_PATH=/app/data/bot_database.db
@@ -21,11 +21,11 @@ services:
       - REDIS_URL=redis://redis:6379/0
     volumes:
       # Монтируем базу данных
-      - ./data:/app/data
+      - ../data:/app/data
       # Монтируем логи
-      - ./logs:/app/logs
+      - ../logs:/app/logs
       # Монтируем backups
-      - ./backups:/app/backups
+      - ../backups:/app/backups
     depends_on:
       - redis
     networks:
