--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,7 +36,7 @@ jobs:
           ruff check . --output-format=github
           
           # Black formatter check
-          black --check .
+          black --check --diff .
 
       - name: Run type checker
         run: |
@@ -53,6 +53,7 @@ jobs:
           file: ./coverage.xml
           flags: unittests
           name: codecov-umbrella
+          token: ${{ secrets.CODECOV_TOKEN }}
         continue-on-error: true
 
       - name: Archive test results
