--- a/env.example
+++ b/env.example
@@ -27,6 +27,16 @@ DATABASE_PATH=bot_database.db
 LOG_LEVEL=INFO
 
 # ========================================
+# MONITORING & ERROR TRACKING (опционально)
+# ========================================
+
+# Sentry DSN для error tracking (оставьте пустым если не используете)
+# SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
+
+# Окружение для мониторинга (development, staging, production)
+ENVIRONMENT=development
+
+# ========================================
 # REDIS CONFIGURATION (для production)
 # ========================================
 
