--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -17,8 +17,6 @@ services:
     environment:
       # Database
       - DATABASE_PATH=/app/data/bot_database.db
-      # Redis (если используется)
-      - REDIS_URL=redis://redis:6379/0
     volumes:
       # Монтируем базу данных
       - ../data:/app/data
@@ -26,8 +24,6 @@ services:
       - ../logs:/app/logs
       # Монтируем backups
       - ../backups:/app/backups
-    depends_on:
-      - redis
     networks:
       - bot_network
     healthcheck:
@@ -36,29 +32,6 @@ services:
       timeout: 10s
       retries: 3
       start_period: 5s
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
-  # Redis для FSM storage (опционально, для production)
-  redis:
-    image: redis:7-alpine
-    container_name: telegram_bot_redis
-    restart: unless-stopped
-    ports:
-      - "6379:6379"
-    volumes:
-      - redis_data:/data
-    networks:
-      - bot_network
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-    command: redis-server --appendonly yes
     logging:
       driver: "json-file"
       options:
@@ -77,7 +50,4 @@ networks:
 # VOLUMES
 # ========================================
 
-volumes:
-  redis_data:
-    driver: local
-
+# Локальные volumes не нужны, используем bind mounts
