--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,25 @@
 # CORE DEPENDENCIES (Production)
 # ========================================
 
-aiogram==3.14.0
+# Telegram Bot Framework
+aiogram==3.16.0  # Updated from 3.14.0
+
+# Async SQLite
 aiosqlite==0.20.0
-APScheduler==3.11.0
+
+# Task Scheduler
+APScheduler==3.11.0  # Stable version (4.x имеет breaking changes)
+
+# Environment Variables
 python-dotenv==1.0.1
+
+# Excel Reports
 openpyxl==3.1.5
-pydantic==2.9.2
+
+# Data Validation
+pydantic==2.10.3  # Updated from 2.9.2, fixed compatibility
+
+# Date/Time Utilities
 python-dateutil==2.9.0.post0
 
 # ========================================
@@ -16,18 +29,18 @@ python-dateutil==2.9.0.post0
 # ========================================
 
 # redis==5.2.1
+# aiogram[redis]==3.16.0
 
 # ========================================
 # OPTIONAL: Мониторинг и отладка
 # Раскомментируйте при необходимости
 # ========================================
 
-# sentry-sdk==2.18.0
-# prometheus-client==0.21.0
+# sentry-sdk==2.19.2  # Error tracking
+# prometheus-client==0.21.0  # Metrics
 
 # ========================================
 # DEVELOPMENT DEPENDENCIES
 # Установите отдельно: pip install -e ".[dev]"
 # или используйте: pip install -r requirements-dev.txt
 # ========================================
-
