--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,9 @@ pydantic==2.10.3  # Updated from 2.9.2, fixed compatibility
 # Date/Time Utilities
 python-dateutil==2.9.0.post0
 
+# Database Migrations
+alembic==1.13.1
+
 # ========================================
 # OPTIONAL: Redis для production FSM storage
 # Раскомментируйте для использования RedisStorage
