feat: major project restructure, audit, and production deployment preparation
Main Changes:
* Fixed critical bug with master assignment without work group
* Created app/core/ structure for configuration and constants
* Merged app/utils.py duplicate into app/utils/ directory
* Organized documentation (moved to docs/reports/session-notes/)
* Conducted full project audit (Rating: 4.7/5)
* Created production deployment documentation and scripts
* Updated env.example with GROUP_CHAT_ID
* Updated README for production deployment
* Added deployment marker .deployment_ready

New Files:
* PRODUCTION_DEPLOY.md - Server deployment commands
* DEPLOY_GUIDE.md - Full deployment guide
* QUICK_DEPLOY_COMMANDS.md - Quick reference
* docs/AUDIT_REPORT_2025-10-15.md - Audit report
* docs/PROJECT_READY_FOR_DEPLOYMENT.md - Deployment status
* scripts/deploy_prod.sh - Automated deployment script
* app/core/ - New configuration structure

Version: 1.2.0
Status: Production Ready

--- a/.gitignore
+++ b/.gitignore
@@ -45,23 +45,34 @@ env/
 *.sqlite
 *.sqlite3
 bot_database.db
+bot_database_dev.db
+bot_database_dev_dev.db
+data/databases/*.db
 
 # Logs
 *.log
 bot.log
 logs/
+data/*.log
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Reports
+# Reports (Excel exports)
 *.xlsx
 reports/
+!reports/.gitkeep
 
 # Backup (исключаем data/backups - она отслеживается)
 backup/
 *.bak
+
+# Data (временные файлы)
+data/*.json
+data/*.xml
+data/*.csv
+!data/migrations/*.json
 
 # Testing & Coverage
 .pytest_cache/
