--- a/env.example
+++ b/env.example
@@ -12,6 +12,10 @@ ADMIN_IDS=123456789,987654321
 # Telegram ID диспетчеров (через запятую)
 DISPATCHER_IDS=111222333,444555666
 
+# ID группы для уведомлений (получите у @userinfobot в группе)
+# Формат: -100xxxxxxxxxx (обязательно с минусом и -100 в начале)
+GROUP_CHAT_ID=-1001234567890
+
 # ========================================
 # DATABASE CONFIGURATION
 # ========================================
@@ -25,6 +29,14 @@ DATABASE_PATH=bot_database.db
 
 # Уровень логирования: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
+
+# ========================================
+# DEVELOPER MODE
+# ========================================
+
+# Режим разработчика (включает дополнительные функции для тестирования)
+# Используйте true только для локальной разработки!
+DEV_MODE=false
 
 # ========================================
 # MONITORING & ERROR TRACKING (опционально)
@@ -62,10 +74,10 @@ DAILY_SUMMARY_TIME=09:00
 # ========================================
 
 # Максимальная длина описания заявки
-MAX_DESCRIPTION_LENGTH=500
+MAX_DESCRIPTION_LENGTH=100
 
 # Максимальная длина заметок
-MAX_NOTES_LENGTH=1000
+MAX_NOTES_LENGTH=100
 
 # Регулярное выражение для валидации телефонных номеров
 PHONE_REGEX=^\+?[0-9]{10,15}$
