feat: Audit fixes - Transaction isolation, Retry mechanism, State Machine, Redis FSM
Major improvements based on security audit:

P0 Fixes:
- Add DEV_MODE=false to docker-compose.prod.yml for RedisStorage activation
- Implement State Machine with role-based access control (order_state_machine.py)
- Add debug logging for Storage configuration

P1 Fixes:
- Add transaction context manager with BEGIN IMMEDIATE for race condition prevention
- Update 4 critical functions: assign_master_to_order, update_order_status, add_user_role, remove_user_role
- Replace all 11 unprotected bot.send_message calls with safe_send_message (retry + exponential backoff)
- Add cache_time parameter to safe_answer_callback for double-click protection
- Add creating_order flag to prevent duplicate order creation
- Update ADMIN role permissions in State Machine

Infrastructure:
- Fix Makefile prod-deploy to start all services (bot + redis)
- Add comprehensive audit documentation (AUDIT_SUMMARY.md, AUDIT_OVERVIEW.md)
- Add production status tracking and guides

Code Quality:
- Add contextlib.asynccontextmanager import for transactions
- Improve error handling and logging
- Update requirements.txt with latest dependencies

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -16,6 +16,7 @@ services:
       - DATABASE_PATH=/app/data/bot_database.db
       - REDIS_URL=redis://redis:6379/0
       - LOG_LEVEL=INFO
+      - DEV_MODE=false
     volumes:
       - bot_data:/app/data
       - bot_logs:/app/logs
