Fix dispatcher reports access and restore old reports menu
- Fix AttributeError when master sends voice instead of text for DR details
- Fix dispatcher access to reports by removing conflicting admin handler
- Fix logging middleware to properly handle UTF-8 characters
- Add access denied messages to @require_role decorator
- Add debug logging for troubleshooting dispatcher reports access
- Fix pre-commit Bandit configuration
- Restore old reports menu with 'Генерация отчетов' title and column layout
- Add handlers for custom reports and back button
- Update financial_reports.py to use old menu design

--- a/env.example
+++ b/env.example
@@ -2,92 +2,92 @@
 # TELEGRAM BOT CONFIGURATION
 # ========================================
 
-# Токен Telegram бота (получите у @BotFather)
-BOT_TOKEN=1234567890:ABCdefGHIjklMNOpqrsTUVwxyz-EXAMPLE
+# Telegram Bot Token (получить у @BotFather)
+BOT_TOKEN=your_bot_token_here
 
-# Telegram ID администраторов (через запятую)
-# Узнать свой ID можно у @userinfobot
+# ID группы для уведомлений мастеров
+WORK_CHAT_ID=-1001234567890
+
+# ========================================
+# ROLES CONFIGURATION
+# ========================================
+
+# Администраторы (через запятую)
 ADMIN_IDS=123456789,987654321
 
-# Telegram ID диспетчеров (через запятую)
-DISPATCHER_IDS=111222333,444555666
+# Диспетчеры (через запятую)
+DISPATCHER_IDS=111111111,222222222
 
-# ID группы для уведомлений (получите у @userinfobot в группе)
-# Формат: -100xxxxxxxxxx (обязательно с минусом и -100 в начале)
-GROUP_CHAT_ID=-1001234567890
+# Мастера (через запятую)
+MASTER_IDS=333333333,444444444
 
 # ========================================
 # DATABASE CONFIGURATION
 # ========================================
 
-# Путь к файлу базы данных SQLite
-DATABASE_PATH=bot_database.db
+# SQLite (по умолчанию для dev)
+DATABASE_URL=sqlite+aiosqlite:///bot_database.db
+
+# PostgreSQL (для production)
+# DATABASE_URL=postgresql+asyncpg://user:password@localhost:5432/bot_db
 
 # ========================================
-# LOGGING CONFIGURATION
+# ENCRYPTION (Шифрование персональных данных)
 # ========================================
 
-# Уровень логирования: DEBUG, INFO, WARNING, ERROR, CRITICAL
+# Ключ шифрования (сгенерировать: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")
+# ВАЖНО: НЕ ПУБЛИКОВАТЬ в git! Хранить в секрете!
+ENCRYPTION_KEY=your_encryption_key_here
+
+# Включить шифрование данных (true/false)
+ENCRYPT_DATA=false
+
+# ========================================
+# REDIS CONFIGURATION (для production FSM)
+# ========================================
+
+# Redis connection
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+# REDIS_PASSWORD=your_redis_password  # Если нужен
+
+# ========================================
+# APPLICATION SETTINGS
+# ========================================
+
+# Режим работы (development/production)
+ENV=development
+
+# Интервал напоминаний (в минутах)
+REMINDER_INTERVAL=60
+
+# Часовой пояс
+TIMEZONE=Europe/Moscow
+
+# Логирование
 LOG_LEVEL=INFO
+LOG_FILE=data/bot.log
 
 # ========================================
-# DEVELOPER MODE
+# BACKUP SETTINGS
 # ========================================
 
-# Режим разработчика (включает дополнительные функции для тестирования)
-# Используйте true только для локальной разработки!
-DEV_MODE=false
+# Путь для бэкапов
+BACKUP_DIR=data/backups
 
-# ========================================
-# MONITORING & ERROR TRACKING (опционально)
-# ========================================
+# Автоматические бэкапы (true/false)
+AUTO_BACKUP=true
 
-# Sentry DSN для error tracking (оставьте пустым если не используете)
-# SENTRY_DSN=https://examplePublicKey@o0.ingest.sentry.io/0
-
-# Окружение для мониторинга (development, staging, production)
-ENVIRONMENT=development
-
-# ========================================
-# REDIS CONFIGURATION (для production)
-# ========================================
-
-# URL для подключения к Redis (для FSM storage в production)
-# Для разработки можно оставить пустым (будет использован MemoryStorage)
-REDIS_URL=redis://localhost:6379/0
-
-# ========================================
-# SCHEDULER CONFIGURATION
-# ========================================
-
-# Интервал проверки SLA заявок (в минутах)
-SLA_CHECK_INTERVAL=30
-
-# Интервал напоминаний о непринятых заявках (в минутах)
-REMINDER_INTERVAL=5
-
-# Время отправки ежедневной сводки (формат HH:MM)
-DAILY_SUMMARY_TIME=09:00
-
-# ========================================
-# APPLICATION CONFIGURATION
-# ========================================
-
-# Максимальная длина описания заявки
-MAX_DESCRIPTION_LENGTH=100
-
-# Максимальная длина заметок
-MAX_NOTES_LENGTH=100
-
-# Регулярное выражение для валидации телефонных номеров
-PHONE_REGEX=^\+?[0-9]{10,15}$
+# Частота бэкапов (в часах)
+BACKUP_INTERVAL=24
 
 # ========================================
 # MONITORING (опционально)
 # ========================================
 
-# Sentry DSN для мониторинга ошибок (опционально)
-# SENTRY_DSN=https://your-sentry-dsn-here
+# Sentry DSN для отслеживания ошибок
+# SENTRY_DSN=https://your_sentry_dsn
 
-# Prometheus metrics port (опционально)
-# PROMETHEUS_PORT=8000
+# Prometheus metrics port
+# METRICS_PORT=9090
