refactor: major refactoring to fix linters and type checking errors
- Fixed Ruff linter errors (242 auto-fixed)

- Added TypedDict for RateLimitBucket

- Fixed MyPy errors in service_factory, order_state_machine, database

- Added transition method to OrderStateMachine

- Fixed typing in utils/retry.py

- Added type annotations for SQL parameters

- Fixed Any returns with cast(int, cursor.lastrowid)

- Added nosec B608 for safe SQL constructions

- Added aiofiles dependency for async file operations

- Fixed filters/group_filter.py bool() wrapping

- Use LOG_LEVEL from .env instead of DEV_MODE

Note: Remaining non-critical linter warnings are related to architecture and code style

--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ aiogram==3.16.0  # Updated from 3.14.0
 # Async SQLite
 aiosqlite==0.20.0
 
+# Async File I/O
+aiofiles==24.1.0
+
 # SQLAlchemy ORM
 sqlalchemy[asyncio]==2.0.25
 asyncpg==0.29.0  # PostgreSQL async driver
