feat: add natural language date parsing for Russian
Added automatic date recognition from natural language when creating orders and setting DR completion dates

New dependency: dateparser 1.2.0 for parsing natural language dates

New utility: app/utils/date_parser.py with parsing, formatting and validation functions

Integration in process_scheduled_time and process_dr_info

Updated user prompts with natural language examples in Russian

--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ pydantic==2.10.3  # Updated from 2.9.2, fixed compatibility
 
 # Date/Time Utilities
 python-dateutil==2.9.0.post0
+dateparser==1.2.0  # Парсинг дат из естественного языка (русский)
 
 # Encryption
 cryptography==43.0.3  # Для шифрования персональных данных
