fix: use env.production and remove hardcoded LOG_LEVEL and DEV_MODE from docker-compose
Changed docker-compose.prod.yml to use env.production instead of .env and removed hardcoded LOG_LEVEL and DEV_MODE from environment section. Now these values are controlled from env.production file only, allowing proper configuration management.

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -11,12 +11,12 @@ services:
     container_name: telegram_repair_bot_prod
     restart: always
     env_file:
-      - ../.env
+      - ../env.production
     environment:
       - DATABASE_PATH=/app/data/bot_database.db
       - REDIS_URL=redis://redis:6379/0
-      - LOG_LEVEL=INFO
-      - DEV_MODE=false
+      # LOG_LEVEL и DEV_MODE берутся из env.production
+      # Не перезаписываем их здесь
     volumes:
       - bot_data:/app/data
       - bot_logs:/app/logs
