--- a/env.example
+++ b/env.example
@@ -1,93 +1,57 @@
 # ========================================
-# TELEGRAM BOT CONFIGURATION
+# Local Development Environment Configuration
 # ========================================
+# Это шаблон для создания .env файла для локальной разработки
+# Скопируйте: cp env.example .env
+# Затем отредактируйте .env и укажите свои значения
 
+# ==================== Bot Configuration ====================
 # Telegram Bot Token (получить у @BotFather)
 BOT_TOKEN=your_bot_token_here
 
-# ID группы для уведомлений мастеров
-WORK_CHAT_ID=-1001234567890
+# ID группы для уведомлений (опционально)
+GROUP_CHAT_ID=-100xxxxxxxxxx
 
-# ========================================
-# ROLES CONFIGURATION
-# ========================================
-
+# ==================== Admin Configuration ====================
 # Администраторы (через запятую)
-ADMIN_IDS=123456789,987654321
+ADMIN_IDS=123456789
 
-# Диспетчеры (через запятую)
-DISPATCHER_IDS=111111111,222222222
+# Диспетчеры (через запятую, опционально)
+DISPATCHER_IDS=
 
-# Мастера (через запятую)
-MASTER_IDS=333333333,444444444
+# ==================== Database Configuration ====================
+# Путь к базе данных (для локальной разработки)
+DATABASE_PATH=bot_database.db
+# НЕ используйте /app/data/ - это путь для Docker
 
-# ========================================
-# DATABASE CONFIGURATION
-# ========================================
+# ==================== Redis Configuration ====================
+# Для локальной разработки Redis опционален (используется MemoryStorage)
+REDIS_URL=redis://localhost:6379/0
 
-# SQLite (по умолчанию для dev)
-DATABASE_URL=sqlite+aiosqlite:///bot_database.db
+# ==================== Environment ====================
+ENVIRONMENT=development
+DEV_MODE=true
+LOG_LEVEL=DEBUG
 
-# PostgreSQL (для production)
-# DATABASE_URL=postgresql+asyncpg://user:password@localhost:5432/bot_db
+# ==================== ORM Configuration ====================
+# ВАЖНО: Для локальной разработки используйте ORM
+USE_ORM=true
 
-# ========================================
-# ENCRYPTION (Шифрование персональных данных)
-# ========================================
+# ==================== Scheduler Configuration ====================
+SLA_CHECK_INTERVAL=30
+REMINDER_INTERVAL=5
 
-# Ключ шифрования (сгенерировать: python -c "from cryptography.fernet import Fernet; print(Fernet.generate_key().decode())")
-# ВАЖНО: НЕ ПУБЛИКОВАТЬ в git! Хранить в секрете!
-ENCRYPTION_KEY=your_encryption_key_here
+# ==================== Backup Configuration ====================
+BACKUP_ENABLED=false
+BACKUP_SCHEDULE=0 3 * * *
 
-# Включить шифрование данных (true/false)
-ENCRYPT_DATA=false
+# ==================== Monitoring (Optional) ====================
+SENTRY_DSN=
 
-# ========================================
-# REDIS CONFIGURATION (для production FSM)
-# ========================================
+# ==================== Scheduler ====================
+SCHEDULER_TIMEZONE=Europe/Moscow
+ENABLE_REMINDERS=true
 
-# Redis connection
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_DB=0
-# REDIS_PASSWORD=your_redis_password  # Если нужен
-
-# ========================================
-# APPLICATION SETTINGS
-# ========================================
-
-# Режим работы (development/production)
-ENV=development
-
-# Интервал напоминаний (в минутах)
-REMINDER_INTERVAL=60
-
-# Часовой пояс
-TIMEZONE=Europe/Moscow
-
-# Логирование
-LOG_LEVEL=INFO
-LOG_FILE=data/bot.log
-
-# ========================================
-# BACKUP SETTINGS
-# ========================================
-
-# Путь для бэкапов
-BACKUP_DIR=data/backups
-
-# Автоматические бэкапы (true/false)
-AUTO_BACKUP=true
-
-# Частота бэкапов (в часах)
-BACKUP_INTERVAL=24
-
-# ========================================
-# MONITORING (опционально)
-# ========================================
-
-# Sentry DSN для отслеживания ошибок
-# SENTRY_DSN=https://your_sentry_dsn
-
-# Prometheus metrics port
-# METRICS_PORT=9090
+# ==================== Notifications ====================
+NOTIFY_ADMINS_ON_STARTUP=false
+NOTIFY_ADMINS_ON_SHUTDOWN=false
