fix: РёСЃРїРѕР»СЊР·РѕРІР°С‚СЊ Р°РІС‚РѕРјР°С‚РёС‡РµСЃРєРёР№ .env РІРјРµСЃС‚Рѕ env_file

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -10,8 +10,8 @@ services:
       dockerfile: docker/Dockerfile
     container_name: telegram_repair_bot_prod
     restart: always
-    env_file:
-      - ../.env
+    # env_file закомментирован - используем автоматический .env
+    # Docker Compose автоматически читает .env из корня проекта
     environment:
       - DATABASE_PATH=/app/data/bot_database.db
       - REDIS_URL=redis://redis:6379/0
