Force USE_ORM=true in Docker production environment
- Add explicit USE_ORM=true in docker-compose.prod.yml environment section
- This ensures ORM is used in production container regardless of .env file settings
- Environment variables have higher priority than env_file

--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -18,6 +18,7 @@ services:
     environment:
       - DATABASE_PATH=/app/data/bot_database.db
       - REDIS_URL=redis://redis:6379/0
+      - USE_ORM=true
       # Остальные переменные берутся из env.production
     volumes:
       - ../data:/app/data
