Fix UTF-8 encoding for Russian text in Docker logs
- Add PYTHONIOENCODING=utf-8, LANG=C.UTF-8, LC_ALL=C.UTF-8 to docker-compose.prod.yml
- Add same encoding variables to Dockerfile
- This fixes garbled Russian text in container logs
- Now logs will display properly: 'РРЅРёС†РёР°Р»РёР·Р°С†РёСЏ Р±Р°Р·С‹ РґР°РЅРЅС‹С…' instead of '  '

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -54,7 +54,10 @@ COPY --chown=botuser:botuser . .
 # Установка переменной PATH для venv
 ENV PATH="/opt/venv/bin:$PATH" \
     PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1
+    PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONIOENCODING=utf-8 \
+    LANG=C.UTF-8 \
+    LC_ALL=C.UTF-8
 
 # Переключение на непривилегированного пользователя
 USER botuser
