--- a/env.city1.example
+++ b/env.city1.example
@@ -1,26 +1,90 @@
-# Пример .env для первого бота (city1)
+TELEGRAM BOT CONFIGURATION
+# ========================================
 
-# Обязательно заменить на реальный токен
+# Токен Telegram бота (получите у @BotFather)
 BOT_TOKEN=
 
-# Список ID админов через запятую
-ADMIN_IDS=123456789
+# Telegram ID администраторов (через запятую)
+# Узнать свой ID можно у @userinfobot
+ADMIN_IDS=
 
-# (опционально) список диспетчеров через запятую
+# Telegram ID диспетчеров (через запятую)
 DISPATCHER_IDS=
 
-# Режим продакшена
-DEV_MODE=false
+# ========================================
+# DATABASE CONFIGURATION
+# ========================================
 
-# Путь к БД внутри контейнера (не менять)
+# Путь к файлу базы данных SQLite
 DATABASE_PATH=/app/data/bot_database.db
 
-# Логирование
+# Использовать ли SQLAlchemy ORM
+USE_ORM=true
+
+# ========================================
+# LOGGING CONFIGURATION
+# ========================================
+
+# Уровень логирования: DEBUG, INFO, WARNING, ERROR, CRITICAL
 LOG_LEVEL=INFO
 
-# Использование ORM (при необходимости)
-USE_ORM=false
+# ========================================
+# MONITORING & ERROR TRACKING (опционально)
+# ========================================
 
-# Интервалы напоминаний/SLA
+# Sentry DSN для error tracking (оставьте пустым если не используете)
+SENTRY_DSN=
+
+# Окружение для мониторинга (development, staging, production)
+ENVIRONMENT=production
+
+# ========================================
+# REDIS CONFIGURATION (для production)
+# ========================================
+
+# URL для подключения к Redis (для FSM storage в production)
+# Для разработки можно оставить пустым (будет использован MemoryStorage)
+REDIS_URL=redis://redis:6379/0
+
+# ========================================
+# SCHEDULER CONFIGURATION
+# ========================================
+
+# Интервал проверки SLA заявок (в минутах)
 SLA_CHECK_INTERVAL=30
+
+# Интервал напоминаний о непринятых заявках (в минутах)
 REMINDER_INTERVAL=5
+
+# Время отправки ежедневной сводки (формат HH:MM)
+DAILY_SUMMARY_TIME=09:00
+
+# Часовой пояс планировщика
+SCHEDULER_TIMEZONE=Europe/Moscow
+
+# Включить напоминания
+ENABLE_REMINDERS=true
+
+# ========================================
+# APPLICATION CONFIGURATION
+# ========================================
+
+# Максимальная длина описания заявки
+MAX_DESCRIPTION_LENGTH=500
+
+# Максимальная длина заметок
+MAX_NOTES_LENGTH=1000
+
+# Регулярное выражение для валидации телефонных номеров
+PHONE_REGEX=^\+?[0-9]{10,15}$
+
+# Режим разработки
+DEV_MODE=false
+
+# ==================== Notifications ====================
+NOTIFY_ADMINS_ON_STARTUP=false
+NOTIFY_ADMINS_ON_SHUTDOWN=true
+
+# ==================== Backup Configuration ====================
+BACKUP_ENABLED=true
+BACKUP_SCHEDULE=0 3 * * *
