env: clarify DATABASE_PATH comments (fixed internal path, change via docker-compose mounts)

--- a/env.city2.example
+++ b/env.city2.example
@@ -15,7 +15,9 @@ DISPATCHER_IDS=
 # DATABASE CONFIGURATION
 # ========================================
 
-# Путь к файлу базы данных SQLite
+# Путь к файлу базы данных SQLite ВНУТРИ контейнера.
+# Меняется через docker-compose монтирование (../data/city2 -> /app/data),
+# а не здесь.
 DATABASE_PATH=/app/data/bot_database.db
 
 # Использовать ли SQLAlchemy ORM
