--- a/.gitignore
+++ b/.gitignore
@@ -38,7 +38,8 @@ env/
 .env.staging
 .env.production
 .env.local
-env.city*
+env.city1
+env.city2
 
 # Database
 *.db
@@ -56,6 +57,8 @@ data/databases/*.db
 *.log
 bot.log
 logs/
+logs1/
+logs2/
 data/*.log
 
 # OS
