--- a/pyproject.toml
+++ b/pyproject.toml
@@ -208,7 +208,7 @@ lines-after-imports = 2
 # ========================================
 
 [tool.mypy]
-python_version = "3.11"
+python_version = "3.13"
 warn_return_any = true
 warn_unused_configs = true
 disallow_untyped_defs = false
@@ -219,7 +219,7 @@ no_implicit_optional = true
 warn_redundant_casts = true
 warn_unused_ignores = true
 warn_no_return = true
-follow_imports = "normal"
+follow_imports = "silent"
 ignore_missing_imports = true
 pretty = true
 show_column_numbers = true
