--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,21 +71,30 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install ruff mypy types-python-dateutil
+        pip install -r requirements.txt
+        pip install -r requirements-dev.txt
 
-    - name: Run Ruff (linter)
+    - name: Run pre-commit hooks
+      run: |
+        pre-commit run --all-files
+      continue-on-error: false
+
+    - name: Run Ruff (linter) - fallback
+      if: failure()
       run: |
         ruff check app/ --output-format=github
       continue-on-error: true
 
-    - name: Run Ruff (formatter check)
+    - name: Run Ruff (formatter check) - fallback
+      if: failure()
       run: |
         ruff format --check app/
       continue-on-error: true
 
-    - name: Run MyPy (type checking)
+    - name: Run MyPy (type checking) - fallback
+      if: failure()
       run: |
-        mypy app/ --ignore-missing-imports --no-strict-optional
+        mypy app/ --ignore-missing-imports --no-strict-optional --python-version=3.13
       continue-on-error: true
 
   security:
@@ -108,7 +117,7 @@ jobs:
 
     - name: Run Bandit (security linter)
       run: |
-        bandit -r app/ -f json -o bandit-report.json
+        bandit -r app/ -f json -o bandit-report.json --skip B608
       continue-on-error: true
 
     - name: Check dependencies for vulnerabilities
