--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,7 +57,7 @@ repos:
     hooks:
       - id: bandit
         name: Bandit security check
-        args: [-r, app/, -f, screen]
+        args: [-r, app/, -f, screen, --skip, B608]
         exclude: ^(tests/|scripts/)
         pass_filenames: false
 
