--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -42,8 +42,7 @@ types-python-dateutil==2.9.0.20241206
 # ========================================
 # DATABASE MIGRATIONS
 # ========================================
-
-alembic==1.16.5
+# alembic уже указан в requirements.txt
 
 # ========================================
 # DEBUGGING
