--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,13 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip install -r requirements.txt
+        # Skip asyncpg on Python 3.13 as it doesn't build yet (not used in code)
+        if [ "${{ matrix.python-version }}" == "3.13" ]; then
+          grep -v "^asyncpg" requirements.txt > requirements_ci.txt || cp requirements.txt requirements_ci.txt
+          pip install -r requirements_ci.txt
+        else
+          pip install -r requirements.txt
+        fi
         pip install -r requirements-dev.txt
 
     - name: Run tests with pytest
