Fix asyncpg skip: Use sed and fallback for Python 3.13
Use sed to remove asyncpg line and add fallback with --ignore-installed
if sed fails, to ensure asyncpg is not installed on Python 3.13

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,8 +36,8 @@ jobs:
         python -m pip install --upgrade pip setuptools wheel
         # Skip asyncpg on Python 3.13 as it doesn't build yet (not used in code)
         if [ "${{ matrix.python-version }}" == "3.13" ]; then
-          python -c "import sys; lines = open('requirements.txt').readlines(); filtered = [l for l in lines if not l.strip().startswith('asyncpg')]; open('requirements_ci.txt', 'w').writelines(filtered)"
-          pip install -r requirements_ci.txt
+          sed '/^asyncpg/d' requirements.txt > requirements_ci.txt
+          pip install -r requirements_ci.txt || pip install -r requirements.txt --ignore-installed asyncpg
         else
           pip install -r requirements.txt
         fi
