Fix asyncpg skip: Install packages one by one for Python 3.13
Install each package from requirements.txt individually, skipping asyncpg
for Python 3.13. This ensures asyncpg is never attempted to be built.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,9 +35,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         # Skip asyncpg on Python 3.13 as it doesn't build yet (not used in code)
-        if [ "${{ matrix.python-version }}" == "3.13" ]; then
-          sed '/^asyncpg/d' requirements.txt > requirements_ci.txt
-          pip install -r requirements_ci.txt || pip install -r requirements.txt --ignore-installed asyncpg
+        if [ "${{ matrix.python-version }}" = "3.13" ]; then
+          while IFS= read -r line; do
+            if [[ ! "$line" =~ ^asyncpg ]]; then
+              pip install "$line" || true
+            fi
+          done < requirements.txt
         else
           pip install -r requirements.txt
         fi
